@startuml
!theme plain
title 数据访问对象模式类图

class GameScore {
    - score: int
    - gameTime: LocalDateTime
    - playerName: String
    - duration: int
    + GameScore()
    + GameScore(int score, String playerName, int duration)
    + GameScore(int score, LocalDateTime gameTime, String playerName, int duration)
    + getScore(): int
    + setScore(int score): void
    + getGameTime(): LocalDateTime
    + setGameTime(LocalDateTime gameTime): void
    + getPlayerName(): String
    + setPlayerName(String playerName): void
    + getDuration(): int
    + setDuration(int duration): void
    + toString(): String
}

interface ScoreDao {
    + saveScore(GameScore gameScore): boolean
    + getAllScores(): List<GameScore>
    + getScoresByRange(int minScore, int maxScore): List<GameScore>
    + getTopScores(int limit): List<GameScore>
    + getScoresByPlayer(String playerName): List<GameScore>
    + clearAllScores(): boolean
}

class FileScoreDao {
    - SCORE_FILE: String = "scores.csv"
    - DELIMITER: String = ","
    - DATE_FORMATTER: DateTimeFormatter
    + FileScoreDao()
    - createFileIfNotExists(): void
    + saveScore(GameScore gameScore): boolean
    + getAllScores(): List<GameScore>
    + getScoresByRange(int minScore, int maxScore): List<GameScore>
    + getTopScores(int limit): List<GameScore>
    + getScoresByPlayer(String playerName): List<GameScore>
    + clearAllScores(): boolean
    - parseScoreLine(String line): GameScore
}

class ScoreService {
    - scoreDao: ScoreDao
    + ScoreService()
    + ScoreService(ScoreDao scoreDao)
    + saveGameScore(int score, String playerName, int duration): boolean
    + printAllScores(): void
    + printTopScores(int limit): void
    + printPlayerScores(String playerName): void
    + printScoreStatistics(): void
    + clearAllScores(): boolean
}

class Game {
    - scoreService: ScoreService
    - gameStartTime: long
    - saveGameScore(): void
    - printGameHistory(): void
}

ScoreDao <|.. FileScoreDao
ScoreService --> ScoreDao : 使用
ScoreService --> GameScore : 创建和操作
FileScoreDao --> GameScore : 持久化
Game --> ScoreService : 使用

note right of ScoreDao : DAO接口\n定义数据访问操作
note bottom of FileScoreDao : 文件存储实现\n使用CSV格式持久化
note top of ScoreService : 业务逻辑层\n处理成绩相关操作
note left of GameScore : 数据传输对象\n封装游戏成绩信息

@enduml